(Fixed) bakery subtitle not aligned to start of product images

--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,7 @@ body {
     font-family: lemon;
     color: #FFAE15;
     font-size: 2em;
-    margin-left: 200px;
+    margin-left: 140px;
 }
 
 .column2 h4 {
